--- a/site.css
+++ b/site.css
@@ -11,7 +11,7 @@ body {background-color: #1a4d35;
   display: flex; 
   align-items: center; 
   justify-content: center; 
-  margin-top: 20px;
+  margin-top: -40px;
 }
 
 #logo {
@@ -21,10 +21,10 @@ body {background-color: #1a4d35;
 }
 
 #titolo {
-  font-size: 44px; 
+  font-size: 64px; 
 }
 
-.titoli{color: #FFF;text-align: center;}
+.titoli{color: #FFF;text-align: center;margin-left: 3%;margin-right: 3%;}
 
 
 
@@ -59,7 +59,10 @@ body {background-color: #1a4d35;
   background-color: #31885f;
   min-width: 120px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10%;
 }
+
+#active{color: #7c7c7c;}
 
 .menu-item:hover .submenu {
   display: block;
@@ -72,7 +75,47 @@ body {background-color: #1a4d35;
 
 .submenu li:hover {
   background-color: #0e881980;
+  border-radius: 30%;
 }
 
 #background{background-color: #7c7c7c;margin-top: -10;margin-left: 0;margin-right: 0;}
 #background2{background-color: #1a4d35;margin-left: 0;margin-right: 0;}
+#background3{background-color: #7c7c7c;margin-left: 0;margin-right: 0;}
+
+@media screen and (max-width: 1400px) {
+  .menu-item {
+    font-size: 65%;
+    padding: 5px 10px;
+  }
+}
+
+.art{height: 1200px;width: auto;margin: 0 1% 1% 1%;}
+#special{height: 1170px;}
+
+
+.articoli{display: flex;
+justify-content: center;width: 100%;}
+
+#social {
+  position: relative;
+  height: 100px; 
+  
+}
+
+.icones {
+  width: 50px; 
+  height: 50px; 
+  position: absolute;
+  top: 0;
+}
+
+#face {
+  right: 0;
+  margin-right: 30px;
+}
+
+#ista{margin-left: 30px;}
+
+.stelle{height: 40px;width: auto;margin-left: 2%;margin-right: 2%;}
+
+#link{color: #143a28;text-decoration: none;}
