--- a/site.css
+++ b/site.css
@@ -5,7 +5,7 @@ body {background-color: #ffffff;
   
 }
 
-#titolo{color: rgb(0, 0, 0);transition: 1500ms;user-select: none;}
+#titolo{color: rgb(0, 0, 0);transition: 1500ms;user-select: none; margin-left: -2%;}
 #titolo:hover{color: #c4a85c;transition: 1500ms;}
 
 .header-container {
@@ -16,7 +16,7 @@ body {background-color: #ffffff;
 }
 
 #logo {
-  width: 200px; 
+  width: 250px; 
   height: auto; 
   margin-right: 10px;
   transition: 0.8ms; 
@@ -138,7 +138,12 @@ body {background-color: #ffffff;
 
 #ista{margin-left: 30px;transition: 800ms;}
 
-.stelle{height: 40px;width: auto;margin-left: 2%;margin-right: 2%;}
+.stelle{height: 40px;width: auto;margin-left: 9%;margin-right: 5%;}
+
+@media screen and (max-width: 1030px) {
+  .stelle{height: 40px;width: auto;margin-left: -1%;margin-right: -1%;}
+  #titolo{color: rgb(0, 0, 0);transition: 1500ms;user-select: none; margin-left: 0%;margin-right: 5%;}
+}
 
 #link{color: #ad9551;}
 #link:hover{color: #c4a85c;}
@@ -208,6 +213,31 @@ body {background-color: #ffffff;
 
 
 
+
+
+
+.iconecontatti{width: 70px;height: 70%;margin-right: -2%;}
+
+#distanziometro{margin-left: 10%;margin-right: 10%;}
+
+@media screen and (max-width: 1500px) 
+{#distanziometro{margin-left: 1%;margin-right: 1%;}
+.titoli{font-size: 30px ;}
+}
+
+@media screen and (max-width: 1030px) 
+{#footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start; /* Per allineare gli elementi all'inizio della colonna */
+  gap: 20px; /* Spazio tra gli elementi, può essere modificato a piacere */
+  border: 1px solid #ffffff;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+.iconecontatti{display: none;}
+  }
 
 
 
